# open-bible-to-anthropologie-biblique

./: pyproject.toml
docs/: Jean 1.md
src/open_bible_to_anthropologie_biblique/: open_bible_to_anthropologie_biblique.py
templates/: chapter.md.jinja
tests/: test_open_bible_to_anthropologie_biblique.py
