[tool.poetry]
name = "open_bible_to_anthropologie_biblique"
version = "0.1.0"
description = "Convert Open Bible to Anthropologie Biblique format"
authors = ["Will Fitzgerald <37049+willf@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "open_bible_to_anthropologie_biblique", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7" # minimum version.


[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
isort = "^5.10.1"
coverage = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"
